# trust-list

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: on_commit.yml
src/: cargo_tree.rs  crate_info.rs  crates_io.rs  dependencies.rs  file_io.rs  generate_list.rs  github.rs  http_client.rs  main.rs  md_table.rs  output_file.rs  output_file_new.rs  progress_bar.rs
tests/data/: crate_info.json
