[package]
name = "trust-list"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["trust", "dependencies", "cargo-subcommand", "tool"]
readme = "README.md"
description = "Command line tool for automatically generating dependency information tables in markdown"
homepage = "https://github.com/lhalf/trust-list-rs"
repository = "https://github.com/lhalf/trust-list-rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
pbr = "1.1.1"