[package]
name = "trust-list"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "Command line tool for generating dependency information tables in markdown"
keywords = ["trust", "dependencies", "cargo-subcommand", "tool"]
categories = ["command-line-interface"]
readme = "README.md"
homepage = "https://github.com/lhalf/trust-list-rs"
repository = "https://github.com/lhalf/trust-list-rs"
exclude = [".gitignore", "justfile", "/.github"]

[dependencies]
clap = { version = "4.5.40", default-features = false, features = ["std", "derive"] }
anyhow = { version = "1.0.98", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "charset", "default-tls"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde", "std"] }
field_names = { version = "0.2.0", default-features = false }

[dev-dependencies]
autospy = { version = "0.0.8", default-features = false, features = ["test"] }